# go2w_sim2sim

./: README.md
.cache/clangd/index/: Buffer.hpp.088270B8531F79E3.idx  ManagerEnv.cpp.BC92748E93DB37B3.idx  ManagerEnv.hpp.75838E60D0EB02E9.idx  Noise.hpp.290D8EE0B742AA6B.idx  RayCaster.cpp.65E66D10E840923F.idx  RayCaster.h.621573ED0C8559E6.idx  RayCasterCamera.cpp.29CE250DEA276245.idx  RayCasterCamera.cpp.A41D02F96366A5AD.idx  RayCasterCamera.h.A22E83A6A69813D4.idx  RayCasterLidar.cpp.7D2C5D044F9E07FC.idx  RayCasterLidar.h.5A3EB3878E6D860A.idx  debug.hpp.8A7AD25B4B540FE3.idx  demo.cpp.B7D18BD7B2A6DE54.idx  demo_env.cpp.670A9AF3870FF8F6.idx  demo_env.h.7E6D37857FF053B4.idx  gamepad.cpp.C0630D5A33E1D855.idx  gamepad.h.AD3C748A588463E1.idx  gamepadkey.h.2A607100E08A01CA.idx  lab2mj.cpp.0F1F2923A9FCF337.idx  libtorch_net.cpp.1D876FADD309EE7A.idx  libtorch_net.h.092787E8D1A6680A.idx  mj_env.cpp.80A9AA3E78DC02D2.idx  mj_env.h.FA1B7089C7176CB6.idx  mujoco_thread.cpp.B5E4072DBDC69F93.idx  mujoco_thread.h.3A58EDD997BE46C3.idx
mujoco/C++/: CMakeLists.txt  lab2mj.cpp  mj_env.cpp  mj_env.h
mujoco/C++/.cache/clangd/index/: lab2mj.cpp.0F1F2923A9FCF337.idx  mj_env.cpp.80A9AA3E78DC02D2.idx  mj_env.h.FA1B7089C7176CB6.idx  obsterm.hpp.F71FA60FE3E854C7.idx
mujoco/C++/demo/: demo.cpp  demo_env.cpp  demo_env.h
mujoco/Python/: MUJOCO_LOG.TXT  lab2mujoco.py  lab2mujoco2.py
policy/history_1/: policy.pt
policy/history_5/: policy.pt
robot/go2w_description/mjcf/: go2w.xml  scene.xml  scene_float_box.xml  scene_terrain.xml
ros2/src/.cache/clangd/index/: abi_macros.hpp.207F64FF36F927E8.idx  adl_serializer.hpp.370BBC0D1ED5A38B.idx  begin.hpp.8A5EAAAC0CF0475A.idx  binary_reader.hpp.2C98F0D01ADBFD14.idx  binary_writer.hpp.C2921D849A821452.idx  byte_container_with_subtype.hpp.512015051B6DD903.idx  cpp_future.hpp.2108EFC971B9B169.idx  detected.hpp.B384675685574FE5.idx  end.hpp.B63A6D890B23EBFD.idx  exceptions.hpp.C8AB904A3CB74B53.idx  from_json.hpp.A51708AC1C719086.idx  go2_robot_state_client.cpp.FFE93CBE1B8B818A.idx  go2_sport_client.cpp.414E206C4641FE53.idx  go2_stand_example.cpp.ABCF488DBF7FBBDA.idx  hash.hpp.4D6701238EFE0E9A.idx  hedley.hpp.3DE5D28934B8926B.idx  hedley_undef.hpp.E94E6B320069CB56.idx  identity_tag.hpp.E7BA713710172C9F.idx  input_adapters.hpp.3634A1A888631489.idx  internal_iterator.hpp.7F7FA3E65139FC87.idx  is_sax.hpp.D75B8318B06E0FF8.idx  iter_impl.hpp.A011A349C87F9C97.idx  iteration_proxy.hpp.AD6F8C9F725323DD.idx  iterator_traits.hpp.9C49E853A458DC27.idx  json.hpp.94C17440B11D5F35.idx  json_custom_base_class.hpp.40C2476FEF38D627.idx  json_fwd.hpp.54D45FC7C85C6956.idx  json_pointer.hpp.756C00CBDC5F48CB.idx  json_ref.hpp.A972806D696F9B51.idx  json_reverse_iterator.hpp.BCCC03B81AA33959.idx  json_sax.hpp.F25BD1C9149D505F.idx  lexer.hpp.63E45E528E3706AD.idx  low_level_ctrl.cpp.6769F77F3FF614A2.idx  low_level_ctrl_hg.cpp.868330C97E39FFF9.idx  macro_scope.hpp.5D6AC9CB2994E93B.idx  macro_unscope.hpp.AC9C51C47798DEEA.idx  motor_crc.cpp.DF731F994F22555A.idx  motor_crc.h.E36566EE596BE61D.idx  motor_crc_hg.cpp.912FEA84CC42FF05.idx  motor_crc_hg.h.127AF84DF3D87F4A.idx  (+22 more)
ros2/src/log/: latest_list
ros2/src/src/: CMakeLists.txt
ros2/src/src/src/go2/: go2_stand_example.cpp
utils/cpp_gamepad/: gamepad.cpp
utils/cpp_manager_env/: Buffer.hpp  ManagerEnv.cpp  ManagerEnv.hpp  Noise.hpp  debug.hpp  libtorch_net.cpp  libtorch_net.h
utils/cpp_ray_caster/: RayCaster.cpp  RayCaster.h  RayCasterCamera.cpp  RayCasterCamera.h  RayCasterLidar.cpp  RayCasterLidar.h
utils/mujoco_thread/: mujoco_thread.cpp  mujoco_thread.h
